--- a/RapidWorkstation64/010-xorg/RLBFILES/rootcopy/etc/X11/xorg-es1000.conf
+++ b/RapidWorkstation64/010-xorg/RLBFILES/rootcopy/etc/X11/xorg-es1000.conf
@@ -1,26 +1,26 @@
 Section "Monitor"
-	Identifier	"ASUS VW246H"
-	Option		"dpms"
+  Identifier "ASUS VW246H"
+  Option "DPMS"
 EndSection
 
 Section "Device"
-	Identifier	"ATI ES1000"
-	Driver		"ati"
+  Identifier "ATI ES1000"
+  Driver "ati"
 EndSection
 
 Section "Screen"
-	Identifier		"Screen 0"
-	Device			"ATI ES1000"
-	Monitor			"ASUS VW246H"
-	DefaultDepth	15
+  Identifier "Screen 0"
+  Device "ATI ES1000"
+  Monitor "ASUS VW246H"
+  DefaultDepth  15
 
-#	SubSection "Display"
-#		Depth	16
-#		Modes	"1920x1080" "1680x1050" "1280x1024" "1440x900"
-#	EndSubsection
+#  SubSection "Display"
+#    Depth  16
+#    Modes  "1920x1080" "1680x1050" "1280x1024" "1440x900"
+#  EndSubsection
 
-	SubSection "Display"
-		Depth	15
-		Modes   "1920x1080" "1680x1050" "1280x1024" "1440x900"
-	EndSubsection
+  SubSection "Display"
+    Depth 15
+    Modes "1920x1080" "1680x1050" "1280x1024" "1440x900"
+  EndSubsection
 EndSection
