Update rl.cfg on RapidDocker64 and VPS64

--- a/RapidDocker64/baseoutput/RLBFILES/boot/rl.cfg
+++ b/RapidDocker64/baseoutput/RLBFILES/boot/rl.cfg
@@ -46,7 +46,7 @@ ENDTEXT
 LABEL iso
 MENU LABEL RapidDocker VMISO
 KERNEL /boot/vmlinuz
-APPEND initrd=/boot/irfs.img rw vga=791 toram nohz=off
+APPEND initrd=/boot/irfs.img rw vga=791 nohz=off
 TEXT HELP
     Run RapidLinux from ISO in a Virtual Machine
 ENDTEXT
