--- a/RapidBuild64/002-utils/RLBFILES/rootcopy/etc/rl_autosave.conf
+++ b/RapidBuild64/002-utils/RLBFILES/rootcopy/etc/rl_autosave.conf
@@ -1,33 +1,32 @@
 autosave off
 rootcopydir /mnt/<disk>/rl/rootcopy
 
-savefile etc/rl_autosave.conf
+savefile /etc/rl_autosave.conf
 
-# Uncomment/add any files below that you want saved 
+# Uncomment/add any files below that you want saved
 
-# savefile etc/passwd
-# savefile etc/group
-# savefile etc/shadow
-# savefile etc/HOSTNAME
-# savefile etc/hosts
-# savefile etc/sudoers
+# savefile /etc/passwd
+# savefile /etc/group
+# savefile /etc/shadow
+# savefile /etc/HOSTNAME
+# savefile /etc/hosts
+# savefile /etc/sudoers
 
-# savefile etc/wpa_supplicant.conf
-# savefile etc/hostapd.conf     
-# savefile etc/dnsmasq.conf     
-# savefile etc/kismet.conf
+# savefile /etc/elogind/logind.conf
+# savefile /etc/X11/xorg.conf
+# savefile /etc/ssh/ssh_config
+# savefile /etc/ssh/sshd_config
 
-# savefile etc/rc.d/rc.rl_boot_services
-# savefile etc/rc.d/rc.inet1.conf
-# savefile etc/rc.d/rc.local
-# savefile etc/rc.d/rc.local_shutdown
-# savefile etc/rc.d/rc.firewall
+# savefile /etc/rc.d/rc.rl_boot_services
+# savefile /etc/rc.d/rc.inet1.conf
+# savefile /etc/rc.d/rc.local
+# savefile /etc/rc.d/rc.local_shutdown
+# savefile /etc/rc.d/rc.firewall
 
-# savefile etc/ssh/ssh_config
-# savefile etc/ssh/sshd_config
+# savefile /etc/cron.daily/backup.sh
 
-# savefile etc/mysql/my.cnf
-
-# savefile etc/X11/xorg.conf
-
-# savefile etc/cron.daily/backup.sh
+# savefile /etc/dnsmasq.conf
+# savefile /etc/wpa_supplicant.conf
+# savefile /etc/hostapd.conf
+# savefile /etc/kismet.conf
+# savefile /etc/mysql/my.cnf
