--- a/RapidBuild64/002-utils/RLBFILES/rootcopy/etc/rl_autosave.conf
+++ b/RapidBuild64/002-utils/RLBFILES/rootcopy/etc/rl_autosave.conf
@@ -25,6 +25,7 @@ savefile /etc/rl_autosave.conf
 
 # savefile /etc/cron.daily/backup.sh
 
+# savefile /etc/docker/daemon.json
 # savefile /etc/dnsmasq.conf
 # savefile /etc/wpa_supplicant.conf
 # savefile /etc/hostapd.conf
