--- a/RapidBuild64/002-utils/RLBFILES/rootcopy/etc/rl_autosave.conf
+++ b/RapidBuild64/002-utils/RLBFILES/rootcopy/etc/rl_autosave.conf
@@ -12,11 +12,6 @@ savefile /etc/rl_autosave.conf
 # savefile /etc/hosts
 # savefile /etc/sudoers
 
-# savefile /etc/elogind/logind.conf
-# savefile /etc/X11/xorg.conf
-# savefile /etc/ssh/ssh_config
-# savefile /etc/ssh/sshd_config
-
 # savefile /etc/rc.d/rc.rl_boot_services
 # savefile /etc/rc.d/rc.inet1.conf
 # savefile /etc/rc.d/rc.local
@@ -24,6 +19,12 @@ savefile /etc/rl_autosave.conf
 # savefile /etc/rc.d/rc.firewall
 
 # savefile /etc/cron.daily/backup.sh
+
+# savefile /etc/udev/rules.d/70-persistent-net.rules
+# savefile /etc/elogind/logind.conf
+# savefile /etc/X11/xorg.conf
+# savefile /etc/ssh/ssh_config
+# savefile /etc/ssh/sshd_config
 
 # savefile /etc/docker/daemon.json
 # savefile /etc/dnsmasq.conf
