Update boot label for MemTest86+ in rl.cfg

--- a/DBR64/baseoutput/RLBFILES/boot/rl.cfg
+++ b/DBR64/baseoutput/RLBFILES/boot/rl.cfg
@@ -46,7 +46,7 @@ ENDTEXT
 MENU SEPARATOR
 
 LABEL memtest86
-MENU LABEL Run Memtest utility
+MENU LABEL Run MemTest86+
 KERNEL /boot/mt86p
 TEXT HELP
     Don't start RapidLinux at all, but
