--- a/DBR64/baseoutput/RLBFILES/boot/grub.cfg
+++ b/DBR64/baseoutput/RLBFILES/boot/grub.cfg
@@ -17,6 +17,9 @@ menuentry "RapidRecorder" {
 menuentry "MemTest86" --hotkey m {
   chainloader /boot/memtest86.efi
 }
+menuentry "MemTest86+" --hotkey p {
+  chainloader /boot/mt86p.efi
+}
 menuentry 'UEFI Firmware Settings' {
   fwsetup
 }
