Add pci=pcie_bus_perf to kernel cmdline for DBR64

--- a/DBR64/baseoutput/RLBFILES/install/grub/grub.cfg
+++ b/DBR64/baseoutput/RLBFILES/install/grub/grub.cfg
@@ -6,7 +6,7 @@ insmod part_gpt
 
 menuentry "RapidRecorder" {
   set root=(hd0,x)
-  linux /boot/vmlinuz rw toram intel_iommu=off pcie_aspm=off memmap=8192M\$8192M ice.rs=8192M ice.rd=2048M ice.rm=6144M
+  linux /boot/vmlinuz rw toram intel_iommu=off pci=pcie_bus_perf pcie_aspm=off memmap=8192M\$8192M ice.rs=8192M ice.rd=2048M ice.rm=6144M
   initrd /boot/irfs.img
 }
 
