--- a/DBR64/baseoutput/RLBFILES/install/refind/refind.conf
+++ b/DBR64/baseoutput/RLBFILES/install/refind/refind.conf
@@ -7,5 +7,5 @@ menuentry "RapidRecorder" {
   volume "ESP"
   loader /rl/vmlinuz
   initrd /rl/irfs.img
-  options "rw toram intel_iommu=off pcie_aspm=off memmap=8192M$8192M ice.rs=8192M ice.rd=2048M ice.rm=6144M"
+  options "rw toram intel_iommu=off pci=pcie_bus_perf pcie_aspm=off memmap=8192M$8192M ice.rs=8192M ice.rd=2048M ice.rm=6144M"
 }
