--- a/DBR64/baseoutput/RLBFILES/boot/refind.conf
+++ b/DBR64/baseoutput/RLBFILES/boot/refind.conf
@@ -12,7 +12,7 @@ menuentry "RapidRecorder" {
   icon /EFI/BOOT/icons/os_slackware.png
   loader /boot/vmlinuz
   initrd /boot/irfs.img
-  options "rw toram intel_iommu=off pcie_aspm=off memmap=8192M$8192M ice.rs=8192M ice.rd=2048M ice.rm=6144M"
+  options "rw toram intel_iommu=off pci=pcie_bus_perf pcie_aspm=off memmap=8192M$8192M ice.rs=8192M ice.rd=2048M ice.rm=6144M"
 }
 
 menuentry "MemTest86" {
