IntelWorkstation64: Force Probe for new Intel GPU chipset

--- a/IntelWorkstation64/baseoutput/RLBFILES/boot/grub.cfg
+++ b/IntelWorkstation64/baseoutput/RLBFILES/boot/grub.cfg
@@ -11,7 +11,7 @@ set timeout=5
 
 menuentry "IntelWorkstation" {
   set gfxpayload=keep
-  linux /boot/vmlinuz rw toram
+  linux /boot/vmlinuz rw toram i915.force_probe=4680
   initrd /boot/irfs.img
 }
 menuentry "MemTest86" --hotkey m {
