--- a/IntelWorkstation64/baseoutput/RLBFILES/boot/refind.conf
+++ b/IntelWorkstation64/baseoutput/RLBFILES/boot/refind.conf
@@ -12,7 +12,7 @@ menuentry "IntelWorkstation" {
   icon /EFI/BOOT/icons/os_slackware.png
   loader /boot/vmlinuz
   initrd /boot/irfs.img
-  options "rw toram"
+  options "rw toram i915.force_probe=4680"
 }
 
 menuentry "MemTest86" {
