--- a/IntelWorkstation64/baseoutput/RLBFILES/boot/rl.cfg
+++ b/IntelWorkstation64/baseoutput/RLBFILES/boot/rl.cfg
@@ -38,7 +38,7 @@ MENU VSHIFT 5
 LABEL ram
 MENU LABEL IntelWS
 KERNEL /boot/vmlinuz
-APPEND initrd=/boot/irfs.img rw vga=791 toram
+APPEND initrd=/boot/irfs.img rw vga=791 toram i915.force_probe=4680
 TEXT HELP
     Copy RapidLinux to RAM
 ENDTEXT
