--- a/IntelWorkstation64/baseoutput/RLBFILES/install/grub/grub.cfg
+++ b/IntelWorkstation64/baseoutput/RLBFILES/install/grub/grub.cfg
@@ -6,7 +6,7 @@ insmod part_gpt
 
 menuentry "IntelWS" {
   set root=(hd0,x)
-  linux /boot/vmlinuz rw toram
+  linux /boot/vmlinuz rw toram i915.force_probe=4680
   initrd /boot/irfs.img
 }
 
