--- a/IntelWorkstation64/baseoutput/RLBFILES/install/refind/refind.conf
+++ b/IntelWorkstation64/baseoutput/RLBFILES/install/refind/refind.conf
@@ -7,5 +7,5 @@ menuentry "IntelWS" {
   volume "ESP"
   loader /rl/vmlinuz
   initrd /rl/irfs.img
-  options "rw toram"
+  options "rw toram i915.force_probe=4680"
 }
