--- a/DBR64/baseoutput/RLBFILES/boot/grub.cfg
+++ b/DBR64/baseoutput/RLBFILES/boot/grub.cfg
@@ -11,7 +11,7 @@ set timeout=5
 
 menuentry "RapidRecorder" {
   set gfxpayload=keep
-  linux /boot/vmlinuz rw toram intel_iommu=off pci=pcie_bus_perf pcie_aspm=off memmap=8192M\$8192M ice.rs=8192M ice.rd=2048M ice.rm=6144M
+  linux /boot/vmlinuz rw toram intel_iommu=off pcie_aspm=off memmap=8192M\$8192M ice.rs=8192M ice.rd=2048M ice.rm=6144M
   initrd /boot/irfs.img
 }
 menuentry "MemTest86" --hotkey m {
