Add amd_iommu=off to BareMetal64 and DBR64

--- a/DBR64/baseoutput/RLBFILES/boot/refind.conf
+++ b/DBR64/baseoutput/RLBFILES/boot/refind.conf
@@ -13,7 +13,7 @@ menuentry "RapidRecorder" {
   loader /boot/vmlinuz
   initrd /boot/irfs.img
 # pci=pcie_bus_perf
-  options "rw toram intel_iommu=off pcie_aspm=off memmap=8192M$8192M ice.rs=8192M ice.rd=2048M ice.rm=6144M"
+  options "rw toram intel_iommu=off pcie_aspm=off amd_iommu=off memmap=8192M$8192M ice.rs=8192M ice.rd=2048M ice.rm=6144M"
 }
 
 menuentry "MemTest86" {
