--- a/DBR64/baseoutput/RLBFILES/boot/rl.cfg
+++ b/DBR64/baseoutput/RLBFILES/boot/rl.cfg
@@ -38,7 +38,7 @@ MENU VSHIFT 5
 LABEL ram
 MENU LABEL RapidRecorder
 KERNEL /boot/vmlinuz
-APPEND initrd=/boot/irfs.img rw vga=791 toram intel_iommu=off pcie_aspm=off memmap=8192M$8192M ice.rs=8192M ice.rd=2048M ice.rm=6144M
+APPEND initrd=/boot/irfs.img rw vga=791 toram intel_iommu=off amd_iommu=off pcie_aspm=off memmap=8192M$8192M ice.rs=8192M ice.rd=2048M ice.rm=6144M
 TEXT HELP
     Copy RapidLinux to RAM
 ENDTEXT
