--- a/DBR64/baseoutput/RLBFILES/install/refind/refind.conf
+++ b/DBR64/baseoutput/RLBFILES/install/refind/refind.conf
@@ -8,5 +8,5 @@ menuentry "RapidRecorder" {
   loader /rl/vmlinuz
   initrd /rl/irfs.img
 # pci=pcie_bus_perf
-  options "rw toram intel_iommu=off pcie_aspm=off memmap=8192M$8192M ice.rs=8192M ice.rd=2048M ice.rm=6144M"
+  options "rw toram intel_iommu=off amd_iommu=off pcie_aspm=off memmap=8192M$8192M ice.rs=8192M ice.rd=2048M ice.rm=6144M"
 }
